# OnlineShop

./: .env.sample  Dockerfile  README.md  categories_fixture.json  docker-compose.yml  products_fixture.json  pyproject.toml
blog/: forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogrecord_published_date.py  0003_alter_blogrecord_is_published.py
blog/templates/blog/: blogrecord_confirm_delete.html  blogrecord_detail.html  blogrecord_form.html  blogrecord_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_updated_at.py  0003_alter_product_options_product_is_published.py  0004_alter_product_category.py  0005_product_owner.py  0006_alter_product_owner.py
catalog/templates/: add_product.html  base_layout.html  contacts.html  home.html  main_nav.html  product_details.html
catalog/templates/catalog/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
config/: settings.py  urls.py
nginx/: Dockerfile
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: cgm.py  csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  profile_form.html
